# commitbee

./: .gitignore  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCS.md  LICENSE  LICENSE.md  PRD.md  README.md  REUSE.toml  SECURITY.md  clippy.toml  deny.toml
.claude/plans/: PLAN_COMMITBEE_V1.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cla.yml
LICENSES/: LicenseRef-Commercial.txt  PolyForm-Noncommercial-1.0.0.txt
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_classify_span.rs  fuzz_diff_parser.rs  fuzz_safety.rs  fuzz_sanitizer.rs  fuzz_signature.rs  fuzz_signature_multilang.rs
src/: app.rs  cli.rs  config.rs  error.rs  eval.rs  lib.rs  main.rs
src/domain/: change.rs  commit.rs  context.rs  diff.rs  mod.rs  symbol.rs
src/queries/: c.scm  cpp.scm  csharp.scm  go.scm  java.scm  javascript.scm  python.scm  ruby.scm  rust.scm  typescript.scm
src/services/: analyzer.rs  context.rs  differ.rs  git.rs  history.rs  mod.rs  progress.rs  safety.rs  sanitizer.rs  splitter.rs  template.rs
src/services/llm/: anthropic.rs  mod.rs  ollama.rs  openai.rs
tests/: analyzer.rs  commit_type.rs  config.rs  context.rs  eval.rs  helpers.rs  history.rs  integration.rs  languages.rs  porcelain.rs  safety.proptest-regressions  safety.rs  sanitizer.rs  splitter.rs  template.rs
tests/fixtures/eval/ast-breaking-public-removal/: diff.patch  metadata.toml  symbols.toml
tests/fixtures/eval/ast-cross-file-connection/: diff.patch  metadata.toml  symbols.toml
tests/fixtures/eval/ast-mixed-ws-semantic/: diff.patch  metadata.toml  symbols.toml
tests/fixtures/eval/ast-overloaded-symbols/: diff.patch  metadata.toml  symbols.toml
tests/fixtures/eval/ast-signature-diff/: diff.patch  metadata.toml  symbols.toml
tests/fixtures/eval/ast-signature-extraction/: diff.patch  metadata.toml  symbols.toml
tests/fixtures/eval/ast-whitespace-only-symbols/: diff.patch  metadata.toml
tests/fixtures/eval/build-dockerfile/: diff.patch  metadata.toml
tests/fixtures/eval/build-github-actions/: diff.patch  metadata.toml
tests/fixtures/eval/chore-cargo-toml-deps/: diff.patch  metadata.toml
tests/fixtures/eval/chore-gitignore/: diff.patch  metadata.toml
tests/fixtures/eval/chore-package-json-deps/: diff.patch  metadata.toml
tests/fixtures/eval/ci-github-workflow/: diff.patch  metadata.toml
tests/fixtures/eval/docs-multi-md/: diff.patch  metadata.toml
tests/fixtures/eval/docs-readme-update/: diff.patch  metadata.toml
tests/fixtures/eval/edge-binary-mixed/: diff.patch  metadata.toml  symbols.toml
tests/fixtures/eval/edge-breaking-msrv/: diff.patch  metadata.toml
tests/fixtures/eval/edge-empty-diff/: diff.patch  metadata.toml
tests/fixtures/eval/edge-large-diff-truncation/: diff.patch  metadata.toml  symbols.toml
tests/fixtures/eval/edge-lock-file-only/: diff.patch  metadata.toml
tests/fixtures/eval/edge-multi-concern/: diff.patch  metadata.toml  symbols.toml
tests/fixtures/eval/edge-rename-only/: diff.patch  metadata.toml
tests/fixtures/eval/feat-rust-new-public-fn/: diff.patch  metadata.toml  symbols.toml
tests/fixtures/eval/fix-go-nil-check/: diff.patch  metadata.toml
tests/fixtures/eval/fix-rust-bug-comment/: diff.patch  metadata.toml
tests/fixtures/eval/fix-ts-hotfix/: diff.patch  metadata.toml
tests/fixtures/eval/perf-rust-hashmap-swap/: diff.patch  metadata.toml
tests/fixtures/eval/refactor-py-extract-function/: diff.patch  metadata.toml
tests/fixtures/eval/refactor-rust-api-replacement/: diff.patch  metadata.toml  symbols.toml
tests/fixtures/eval/refactor-rust-heavy-deletion/: diff.patch  metadata.toml
tests/fixtures/eval/revert-rust-feature-rollback/: diff.patch  metadata.toml
tests/fixtures/eval/simple-feat/: diff.patch  expected.txt  metadata.toml  response.json
tests/fixtures/eval/style-only/: diff.patch  expected.txt  metadata.toml  response.json
tests/fixtures/eval/style-rust-cargo-fmt/: diff.patch  metadata.toml
tests/fixtures/eval/style-rust-whitespace-symbols/: diff.patch  metadata.toml
tests/fixtures/eval/style-ts-prettier/: diff.patch  metadata.toml
tests/fixtures/eval/test-rust-new-tests/: diff.patch  metadata.toml
tests/fixtures/eval/test-ts-spec-file/: diff.patch  metadata.toml
tests/snapshots/: sanitizer__sanitize_breaking_change_emitted_when_include_body_false.snap  sanitizer__sanitize_breaking_change_include_scope_false.snap  sanitizer__sanitize_breaking_change_json_no_scope.snap  sanitizer__sanitize_breaking_change_json_with_body_and_footer.snap  sanitizer__sanitize_breaking_change_json_with_scope.snap  sanitizer__sanitize_json_with_body.snap
