# SPDX-FileCopyrightText: 2026 Sephyi <me@sephy.io>
#
# SPDX-License-Identifier: GPL-3.0-only

[package]
name = "commitbee"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "AI-powered commit message generator"
license = "GPL-3.0-only"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "signal", "sync"] }
tokio-stream = "0.1"
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Config & paths
directories = "6.0"

# HTTP client
reqwest = { version = "0.13", features = ["json", "stream"] }

# Git (pure Rust) - minimal features
gix = { version = "0.78", default-features = false, features = ["revision"] }

# Code analysis
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-javascript = "0.25"

# Error handling
thiserror = "2.0"

# Terminal UI
dialoguer = "0.12"
console = "0.16"
indicatif = "0.18"

# Utilities
regex = "1.12"

[dev-dependencies]
tempfile = "3.25"
assert_cmd = "2.0"
predicates = "3.1"
wiremock = "0.6"
insta = { version = "1.42", features = ["yaml"] }
proptest = "1.6"
