# SPDX-FileCopyrightText: 2026 Sephyi <me@sephy.io>
#
# SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Commercial

[package]
name = "commitbee"
version = "0.6.0-rc.1"
edition = "2024"
rust-version = "1.94"
description = "AI-powered commit message generator using tree-sitter semantic analysis and local LLMs"
license = "AGPL-3.0-only OR LicenseRef-Commercial"
repository = "https://github.com/Sephyi/commitbee"
readme = "README.md"
keywords = [
  "git",
  "commit-message",
  "conventional-commits",
  "tree-sitter",
  "llm",
]
categories = ["development-tools", "command-line-utilities"]
exclude = [".github/", "tests/snapshots/"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Async runtime
tokio = { version = "1.50", features = [
  "rt-multi-thread",
  "macros",
  "signal",
  "sync",
  "process",
] }
tokio-stream = "0.1"
tokio-util = "0.7"

# Parallelism (CPU-bound work: tree-sitter parsing)
rayon = "1.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"

# Config & paths
directories = "6.0"
figment = { version = "0.10", features = ["toml", "env"] }

# HTTP client
reqwest = { version = "0.13", features = ["json", "stream"] }

# Git (pure Rust) - minimal features
gix = { version = "0.80", default-features = false, features = ["revision"] }

# Code analysis
tree-sitter = "0.26"

# Language grammars (all optional, all enabled by default)
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-c = { version = "0.24", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-ruby = { version = "0.23", optional = true }
tree-sitter-c-sharp = { version = "0.23", optional = true }

# Error handling
thiserror = "2.0"
miette = { version = "7.6", features = ["fancy"] }

# Terminal UI
dialoguer = "0.12"
console = "0.16"
indicatif = "0.18"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Secure storage (optional)
keyring = { version = "3", optional = true }

# Utilities
regex = "1.12"
globset = "0.4"

[features]
default = [
  "lang-rust",
  "lang-typescript",
  "lang-javascript",
  "lang-python",
  "lang-go",
  "lang-java",
  "lang-c",
  "lang-cpp",
  "lang-ruby",
  "lang-csharp",
]
secure-storage = ["keyring"]
eval = []
lang-rust = ["tree-sitter-rust"]
lang-typescript = ["tree-sitter-typescript"]
lang-javascript = ["tree-sitter-javascript"]
lang-python = ["tree-sitter-python"]
lang-go = ["tree-sitter-go"]
lang-java = ["tree-sitter-java"]
lang-c = ["tree-sitter-c"]
lang-cpp = ["tree-sitter-cpp"]
lang-ruby = ["tree-sitter-ruby"]
lang-csharp = ["tree-sitter-c-sharp"]
all-languages = [
  "lang-rust",
  "lang-typescript",
  "lang-javascript",
  "lang-python",
  "lang-go",
  "lang-java",
  "lang-c",
  "lang-cpp",
  "lang-ruby",
  "lang-csharp",
]

[profile.release]
lto = true
strip = true
codegen-units = 1

[dev-dependencies]
tempfile = "3.26"
assert_cmd = "2.0"
predicates = "3.1"
wiremock = "0.6"
insta = { version = "1.42", features = ["yaml"] }
proptest = "1.6"
