# SPDX-FileCopyrightText: 2026 Sephyi <me@sephy.io>
#
# SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Commercial

[package]
name = "commitbee-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
commitbee = { path = "..", features = ["lang-rust"] }

[[bin]]
name = "fuzz_sanitizer"
path = "fuzz_targets/fuzz_sanitizer.rs"
doc = false

[[bin]]
name = "fuzz_safety"
path = "fuzz_targets/fuzz_safety.rs"
doc = false

[[bin]]
name = "fuzz_diff_parser"
path = "fuzz_targets/fuzz_diff_parser.rs"
doc = false

[[bin]]
name = "fuzz_signature"
path = "fuzz_targets/fuzz_signature.rs"
doc = false

[[bin]]
name = "fuzz_classify_span"
path = "fuzz_targets/fuzz_classify_span.rs"
doc = false
